AUTOMAKE_OPTIONS = foreign

dist_man_MANS = tos-check-env.1 	\
		tos-ident-flags.1	\
                tos-install-jni.1	\
                tos-locate-jre.1	\
                tos-mote-key.1		\
                tos-mviz.1              \
                tos-serial-configure.1	\
                tos-serial-debug.1	\
                tos-set-symbols.1	\
                tos-storage-at45db.1	\
                tos-storage-stm25p.1	\
                tos-write-image.1


bin_SCRIPTS = tos-ident-flags \
	      tos-install-jni \
	      tos-locate-jre \
	      tos-mote-key \
              tos-mviz    \
	      tos-serial-configure \
	      tos-set-symbols \
	      tos-write-image \
	      tos-check-env \
	      tos-storage-stm25p \
	      tos-storage-at45db \
	      tos-build-deluge-image \
	      tos-deluge

bin_PROGRAMS = tos-serial-debug

pythondir = $(bindir)
python_DATA = tinyos.py
