# Copyright (c) 2002-2005 Intel Corporation
# All rights reserved.
#
# This file is distributed under the terms in the attached INTEL-LICENSE
# file. If you do not find these files, copies can be found by writing to
# Intel Research Berkeley, 2150 Shattuck Avenue, Suite 1300, Berkeley, CA,
# 94704.  Attention:  Intel License Inquiry.

AUTOMAKE_OPTIONS = foreign

SUBDIRS = nesdoc-py

bin_SCRIPTS = nesdoc-archive nesdoc-genhtml

